# Software-Testing-Assignment

./: .gitignore  Dockerfile  HANDOFF.md  README.md  RUNNING.md  docker-compose.yml  main.py  pyproject.toml  run_all_wsl_marshal_tests.sh
hardware/: portable_marshal_equivalence.py
linux_results_final/: compare_linux_py310_py311.txt  compare_linux_py310_py312.txt  compare_linux_py310_py313.txt  compare_linux_py310_py314.txt  compare_linux_py311_py312.txt  compare_linux_py311_py313.txt  compare_linux_py311_py314.txt  compare_linux_py312_py313.txt  compare_linux_py312_py314.txt  compare_linux_py313_py314.txt  compare_linux_py313_run1_run2.txt  digests-linux-py310.json  digests-linux-py311.json  digests-linux-py312.json  digests-linux-py313-run1.json  digests-linux-py313-run2.json  digests-linux-py314.json  linux_digest_matrix.txt  linux_py310_full.txt  linux_py311_full.txt  linux_py312_full.txt  linux_py313_cross_process_hash_seed.txt  linux_py313_determinism_hash.txt  linux_py313_empty_large.txt  linux_py313_format_versions.txt  linux_py313_full.txt  linux_py313_fuzzing.txt  linux_py313_invalid_unsupported.txt  linux_py313_recursive_reference.txt  linux_py313_source_informed.txt  linux_py314_full.txt  linux_ruff_check.txt  linux_ruff_format_check.txt
macos_results_final/: 06_macos_blackbox_floating_point.txt  07_macos_blackbox_recursive_cyclic.txt  08_macos_blackbox_empty_large_collections.txt  09_macos_blackbox_invalid_unsupported.txt  10_macos_blackbox_determinism_hash.txt  11_macos_blackbox_cross_process.txt  12_macos_blackbox_fuzzing.txt  digests-macos-py310.json  (+11 more)
(+86 files in other folders)
