[project]
name = "softwaretestingassignment"
version = "0.1.0"
description = "Reproducible marshal stability and correctness test suite"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "hypothesis>=6.136.0",
    "pytest>=8.4.0",
    "ruff>=0.12.0",
]

[project.scripts]
marshal-stability = "marshal_stability.cli:main"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/marshal_stability"]
