[project]
name = "marshal-stability"
version = "0.1.0"
description = "Course test suite for Python marshal stability and correctness."
readme = "RUNNING.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
marshal-stability = "marshal_stability.cli:main"

[dependency-groups]
dev = [
  "hypothesis>=6.148.0",
  "pytest>=8.4.0",
  "ruff>=0.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/marshal_stability"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
src = ["src", "tests", "scripts", "hardware"]

[tool.ruff.lint]
select = ["B", "BLE", "E", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"
